feat: Productionization & Governance Loop (Weeks 15-20)
Phase 1 Automation & Release Gates:
- Add release-gate-phase1.yml CI workflow for Phase 1 validation
- Create validate-slos.sh for SLO validation against Prometheus
- Create check-phase1-criteria.sh for complete Phase 1 criteria checking
- Create run-soak-test.sh for 24-hour soak testing

HA Topologies (k8s/kustomize/overlays/ha):
- Add kustomization.yaml with anti-affinity rules and topology spread
- Add pdb-all.yaml with PodDisruptionBudgets for all services
- Add hpa-all.yaml with HorizontalPodAutoscalers with custom metrics

Chaos & Failover Validation:
- Add validate-ha-failover.sh for HA failover testing with chaos experiments

Security & Penetration Testing:
- Add synapse-connector-tests.yaml OWASP ZAP config for SYNAPSE
- Add plato-governance-tests.yaml OWASP ZAP config for PLATO
- Update security-scan.yml with comprehensive security scanning

Governance Loop Enhancement:
- Add validate-audit-trail.sh for audit trail validation
- Add governance-audit-validation.json E2E scenario

Release Gating:
- Add tag-integration-complete.sh for v1.0.0-integration-complete gating

Note: Service runbooks (CAPSULE, PLATO, NEXUS, SYNAPSE) created in
respective module repositories which are managed separately.

--- a/butterfly-security-starter/pom.xml
+++ b/butterfly-security-starter/pom.xml
@@ -23,6 +23,7 @@
         <butterfly-common.version>0.2.1</butterfly-common.version>
         <lombok.version>1.18.30</lombok.version>
         <lettuce.version>6.3.0.RELEASE</lettuce.version>
+        <micrometer.version>1.12.0</micrometer.version>
     </properties>
 
     <dependencies>
@@ -100,6 +101,13 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Micrometer for SecretProvider metrics -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-core</artifactId>
+            <version>${micrometer.version}</version>
+        </dependency>
+
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -149,4 +157,3 @@
         </plugins>
     </build>
 </project>
-
