--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -1,293 +1,244 @@
-name: BUTTERFLY Security Scan
+# =============================================================================
+# BUTTERFLY Security Scanning Workflow
+# =============================================================================
+# Automated security scanning for BUTTERFLY services including:
+#   - Container image scanning with Trivy
+#   - Dependency vulnerability scanning
+#   - SAST with Semgrep
+#   - DAST with OWASP ZAP (on staging)
+#
+# Runs on:
+#   - Push to main/release branches
+#   - Pull requests
+#   - Weekly scheduled scans
+#   - Manual dispatch
+# =============================================================================
+
+name: Security Scan
 
 on:
   push:
-    branches: [main, develop]
+    branches:
+      - main
+      - 'release/*'
   pull_request:
-    branches: [main, develop]
+    branches:
+      - main
   schedule:
-    # Run weekly security scans on Monday at 6 AM UTC
-    - cron: '0 6 * * 1'
+    # Weekly scan on Sundays at 2 AM UTC
+    - cron: '0 2 * * 0'
   workflow_dispatch:
     inputs:
-      scan_all:
-        description: 'Run all security scans'
+      run_dast:
+        description: 'Run DAST scanning (requires running environment)'
         required: false
-        default: 'true'
-
-permissions:
-  contents: read
-  security-events: write
-  pull-requests: write
+        default: false
+        type: boolean
+      target_env:
+        description: 'Target environment for DAST'
+        required: false
+        default: 'staging'
+        type: choice
+        options:
+          - staging
+          - dev
 
 env:
   JAVA_VERSION: '17'
-  JAVA_DISTRIBUTION: 'temurin'
+  TRIVY_VERSION: '0.48.0'
+  ZAP_VERSION: '2.14.0'
 
 jobs:
-  # Dependency vulnerability scanning with OWASP Dependency-Check
-  dependency-check:
-    name: OWASP Dependency Check
+  # ---------------------------------------------------------------------------
+  # Dependency Vulnerability Scan
+  # ---------------------------------------------------------------------------
+  dependency-scan:
+    name: Dependency Scan
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        module:
+          - butterfly-common
+          - butterfly-nexus
+          - PERCEPTION
+          - CAPSULE
+          - ODYSSEY
+          - PLATO
+          - SYNAPSE
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Set up JDK
+      - name: Set up Java
         uses: actions/setup-java@v4
         with:
           java-version: ${{ env.JAVA_VERSION }}
-          distribution: ${{ env.JAVA_DISTRIBUTION }}
+          distribution: 'temurin'
           cache: 'maven'
-
-      - name: Cache OWASP NVD Database
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2/repository/org/owasp/dependency-check-data
-          key: owasp-nvd-${{ runner.os }}-${{ github.run_id }}
-          restore-keys: |
-            owasp-nvd-${{ runner.os }}-
 
       - name: Run OWASP Dependency Check
         run: |
-          mvn org.owasp:dependency-check-maven:check \
+          cd ${{ matrix.module }}
+          mvn dependency-check:check \
             -DfailBuildOnCVSS=7 \
-            -DsuppressionFile=.github/owasp-suppressions.xml \
-            -DnvdApiKey=${{ secrets.NVD_API_KEY }} \
-            --batch-mode
-        continue-on-error: true
+            -Dformat=HTML \
+            -DprettyPrint=true \
+            || true
 
       - name: Upload Dependency Check Report
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: dependency-check-report
-          path: '**/target/dependency-check-report.html'
-          retention-days: 14
+          name: dependency-check-${{ matrix.module }}
+          path: ${{ matrix.module }}/target/dependency-check-report.html
+          retention-days: 30
 
-      - name: Check for Critical Vulnerabilities
-        run: |
-          # Fail if any CVE with CVSS >= 7.0 is found (non-suppressed)
-          if grep -r "cvssV3" **/target/dependency-check-report.json 2>/dev/null | grep -E '"baseScore"\s*:\s*[7-9]\.[0-9]|10\.0'; then
-            echo "::error::Critical vulnerabilities (CVSS >= 7.0) found!"
-            exit 1
-          fi
-        continue-on-error: ${{ github.event_name == 'schedule' }}
-
-  # Static Application Security Testing with CodeQL
-  codeql:
-    name: CodeQL Analysis
+  # ---------------------------------------------------------------------------
+  # Container Image Scanning
+  # ---------------------------------------------------------------------------
+  image-scan:
+    name: Container Image Scan
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        image:
+          - butterfly-nexus
+          - perception-api
+          - capsule
+          - odyssey-core
+          - plato
+          - synapse
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
-        with:
-          languages: java
-          queries: +security-extended,security-and-quality
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Set up JDK
-        uses: actions/setup-java@v4
-        with:
-          java-version: ${{ env.JAVA_VERSION }}
-          distribution: ${{ env.JAVA_DISTRIBUTION }}
-          cache: 'maven'
-
-      - name: Build with Maven (for CodeQL)
-        run: mvn compile -DskipTests --batch-mode
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
-        with:
-          category: "/language:java"
-
-  # Static analysis with Semgrep
-  semgrep:
-    name: Semgrep SAST
-    runs-on: ubuntu-latest
-    container:
-      image: semgrep/semgrep
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Run Semgrep
+      - name: Build image for scanning
         run: |
-          semgrep scan \
-            --config auto \
-            --config p/java \
-            --config p/security-audit \
-            --config p/owasp-top-ten \
-            --json \
-            --output semgrep-results.json \
-            --error \
-            --severity ERROR
+          docker build -t ${{ matrix.image }}:scan -f ${{ matrix.image }}/Dockerfile .
         continue-on-error: true
 
-      - name: Upload Semgrep Results
-        uses: actions/upload-artifact@v4
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: '${{ matrix.image }}:scan'
+          format: 'sarif'
+          output: 'trivy-results-${{ matrix.image }}.sarif'
+          severity: 'CRITICAL,HIGH'
+          vuln-type: 'os,library'
+
+      - name: Upload Trivy scan results
+        uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
-          name: semgrep-results
-          path: semgrep-results.json
-          retention-days: 14
+          sarif_file: 'trivy-results-${{ matrix.image }}.sarif'
 
-      - name: Convert to SARIF
-        run: |
-          semgrep scan \
-            --config auto \
-            --config p/java \
-            --config p/security-audit \
-            --sarif \
-            --output semgrep.sarif \
-            || true
+  # ---------------------------------------------------------------------------
+  # SAST with Semgrep
+  # ---------------------------------------------------------------------------
+  sast-scan:
+    name: SAST Scan
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Upload SARIF to GitHub
+      - name: Run Semgrep
+        uses: returntocorp/semgrep-action@v1
+        with:
+          config: >-
+            p/java
+            p/spring
+            p/owasp-top-ten
+            p/security-audit
+            p/secrets
+          generateSarif: true
+
+      - name: Upload Semgrep results
         uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
           sarif_file: semgrep.sarif
-        continue-on-error: true
 
-  # Secret scanning with TruffleHog
-  trufflehog:
-    name: TruffleHog Secret Scan
+  # ---------------------------------------------------------------------------
+  # Secret Scanning
+  # ---------------------------------------------------------------------------
+  secret-scan:
+    name: Secret Scan
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: TruffleHog Scan
+      - name: Run Gitleaks
+        uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE }}
+
+      - name: Run TruffleHog
         uses: trufflesecurity/trufflehog@main
         with:
           path: ./
-          base: ${{ github.event.repository.default_branch }}
+          base: ""
+          head: HEAD
           extra_args: --only-verified
 
-      - name: Fail on Secrets
-        run: |
-          # Check if any verified secrets were found
-          if [ -f trufflehog-results.json ] && [ -s trufflehog-results.json ]; then
-            echo "::error::Verified secrets found in the codebase!"
-            exit 1
-          fi
-        continue-on-error: true
-
-  # License compliance check
-  license-check:
-    name: License Compliance
+  # ---------------------------------------------------------------------------
+  # DAST with OWASP ZAP (Optional - requires running environment)
+  # ---------------------------------------------------------------------------
+  dast-scan:
+    name: DAST Scan
     runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch' && inputs.run_dast
+    needs: [dependency-scan, image-scan, sast-scan]
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Set up JDK
-        uses: actions/setup-java@v4
+      - name: Run OWASP ZAP - SYNAPSE Connector Tests
+        uses: zaproxy/action-full-scan@v0.8.0
         with:
-          java-version: ${{ env.JAVA_VERSION }}
-          distribution: ${{ env.JAVA_DISTRIBUTION }}
-          cache: 'maven'
+          target: '${{ vars.SYNAPSE_URL || format(''http://synapse.{0}.butterfly.example.com'', inputs.target_env) }}'
+          rules_file_name: 'security/pentest/synapse-connector-tests.yaml'
+          allow_issue_writing: false
+          fail_action: false
+          artifact_name: 'zap-synapse-report'
 
-      - name: Check Licenses
-        run: |
-          mvn license:third-party-report \
-            -Dlicense.excludedScopes=test \
-            --batch-mode || true
-
-      - name: Upload License Report
-        uses: actions/upload-artifact@v4
-        if: always()
+      - name: Run OWASP ZAP - PLATO Governance Tests
+        uses: zaproxy/action-full-scan@v0.8.0
         with:
-          name: license-report
-          path: '**/target/site/third-party-report.html'
-          retention-days: 14
+          target: '${{ vars.PLATO_URL || format(''http://plato.{0}.butterfly.example.com'', inputs.target_env) }}'
+          rules_file_name: 'security/pentest/plato-governance-tests.yaml'
+          allow_issue_writing: false
+          fail_action: false
+          artifact_name: 'zap-plato-report'
 
-  # Container image scanning (if Dockerfiles exist)
-  container-scan:
-    name: Container Security Scan
-    runs-on: ubuntu-latest
-    if: ${{ hashFiles('**/Dockerfile') != '' }}
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Find Dockerfiles
-        id: dockerfiles
-        run: |
-          echo "files=$(find . -name 'Dockerfile' -type f | tr '\n' ' ')" >> $GITHUB_OUTPUT
-
-      - name: Build Images for Scanning
-        run: |
-          for dockerfile in ${{ steps.dockerfiles.outputs.files }}; do
-            dir=$(dirname $dockerfile)
-            name=$(echo $dir | tr '/' '-' | sed 's/^-//')
-            docker build -t butterfly-$name:scan -f $dockerfile $dir || true
-          done
-
-      - name: Run Trivy Scan
-        uses: aquasecurity/trivy-action@master
-        with:
-          scan-type: 'image'
-          image-ref: 'butterfly:scan'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-          severity: 'CRITICAL,HIGH'
-        continue-on-error: true
-
-      - name: Upload Trivy Results
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
-        with:
-          sarif_file: trivy-results.sarif
-        continue-on-error: true
-
-  # Security compliance summary
+  # ---------------------------------------------------------------------------
+  # Security Summary
+  # ---------------------------------------------------------------------------
   security-summary:
     name: Security Summary
     runs-on: ubuntu-latest
-    needs: [dependency-check, codeql, semgrep, trufflehog, license-check]
+    needs: [dependency-scan, image-scan, sast-scan, secret-scan]
     if: always()
     steps:
-      - name: Check Overall Status
+      - name: Generate Security Summary
         run: |
           echo "## Security Scan Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "| Check | Status |" >> $GITHUB_STEP_SUMMARY
-          echo "|-------|--------|" >> $GITHUB_STEP_SUMMARY
-          echo "| OWASP Dependency Check | ${{ needs.dependency-check.result == 'success' && '✅ Passed' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| CodeQL Analysis | ${{ needs.codeql.result == 'success' && '✅ Passed' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Semgrep SAST | ${{ needs.semgrep.result == 'success' && '✅ Passed' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| TruffleHog Secrets | ${{ needs.trufflehog.result == 'success' && '✅ Passed' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| License Compliance | ${{ needs.license-check.result == 'success' && '✅ Passed' || '⚠️ Review' }} |" >> $GITHUB_STEP_SUMMARY
-
-      - name: Comment on PR
-        if: github.event_name == 'pull_request'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const summary = `## 🔐 Security Scan Results
-
-            | Check | Status |
-            |-------|--------|
-            | OWASP Dependency Check | ${{ needs.dependency-check.result == 'success' && '✅ Passed' || '❌ Failed' }} |
-            | CodeQL Analysis | ${{ needs.codeql.result == 'success' && '✅ Passed' || '❌ Failed' }} |
-            | Semgrep SAST | ${{ needs.semgrep.result == 'success' && '✅ Passed' || '❌ Failed' }} |
-            | TruffleHog Secrets | ${{ needs.trufflehog.result == 'success' && '✅ Passed' || '❌ Failed' }} |
-            | License Compliance | ${{ needs.license-check.result == 'success' && '✅ Passed' || '⚠️ Review' }} |
-
-            > View detailed reports in the workflow artifacts.
-            `;
-
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: summary
-            });
-
-      - name: Fail if Critical Issues
-        if: |
-          needs.dependency-check.result == 'failure' ||
-          needs.codeql.result == 'failure' ||
-          needs.trufflehog.result == 'failure'
-        run: |
-          echo "::error::Critical security issues detected. Please review the scan reports."
-          exit 1
+          echo "| Scan Type | Status |" >> $GITHUB_STEP_SUMMARY
+          echo "|-----------|--------|" >> $GITHUB_STEP_SUMMARY
+          echo "| Dependency Scan | ${{ needs.dependency-scan.result == 'success' && '✅ Passed' || '❌ Issues Found' }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Image Scan | ${{ needs.image-scan.result == 'success' && '✅ Passed' || '❌ Issues Found' }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| SAST Scan | ${{ needs.sast-scan.result == 'success' && '✅ Passed' || '❌ Issues Found' }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Secret Scan | ${{ needs.secret-scan.result == 'success' && '✅ Passed' || '❌ Issues Found' }} |" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Next Steps" >> $GITHUB_STEP_SUMMARY
+          echo "1. Review any findings in the Security tab" >> $GITHUB_STEP_SUMMARY
+          echo "2. Address critical/high severity issues before release" >> $GITHUB_STEP_SUMMARY
+          echo "3. For DAST scans, run manually with \`run_dast: true\`" >> $GITHUB_STEP_SUMMARY
